# BHR

./: .gitignore  .gitlab-ci.build.sh  .gitlab-ci.yaml  .gitlab-ci.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  autocommit  curly.org  stack.yaml  update-deps
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-issue.md
capricon/: ChangeLog.md  capricon.cabal
capricon/data/: prelude
capricon/exe/: CaPriCon.hs  CaPriCon_Engine.hs  CaPriCon_haste.hs  Coinche.hs  WiQEE.hs
capricon/src/Algebra/Monad/: Concatenative.hs
capricon/src/CaPriCon/: Run.hs
capricon/src/Data/: CaPriCon.hs
capricon/src/Data/CaPriCon/: Extraction.hs
ci/: pages
curly/: ChangeLog.md  curly.cabal
curly-core/: ChangeLog.md  curly-core.cabal  sha256.c
curly-core/src/Curly/: Core.hs
curly-core/src/Curly/Core/: Annotated.hs  Documentation.hs  Library.hs  Parser.hs  Peers.hs  Security.hs  Types.hs  VCS.hs
curly-core/src/Curly/Core/Security/: EC.hs  SHA256.hs
curly-core/src/Curly/Core/VCS/: Diff.hs
curly-dht/: ChangeLog.md  OPTIONS  curly-dht.cabal
curly-dht/src/Curly/: DHT.hs
curly-dht/src/Curly/DHT/: Kademlia.hs
curly-gateway/: ChangeLog.md  LICENSE  curly-gateway.cabal
curly-gateway/src/Curly/: Gateway.hs
curly-gateway/src/Curly/DHT/: Kademlia.hs
curly-gui/: ChangeLog.md  OPTIONS  curly-gui.cabal
curly-gui/exe/Curly/: GUI.hs  GUI2.hs
curly-kademlia/: ChangeLog.md  curly-kademlia.cabal
curly-kademlia/src/Network/: Kademlia.hs
curly-kademlia/src/Network/Kademlia/: Instance.hs
curly-system/: ChangeLog.md  curly-system.cabal
curly-system/src/Curly/: System.hs
curly-system/src/Curly/System/: Base.hs  HTML.hs  JavaScript.hs
curly-system/src/Curly/System/ARM/: Common.hs  Linux.hs
curly-system/src/Curly/System/Format/: ELF.hs
curly-system/src/Curly/System/Format/JVM/: Class.hs
curly-system/src/Curly/System/X86/: Common.hs  Linux.hs
curly-terminfo/: ChangeLog.md  curly-terminfo.cabal
curly-terminfo/src/System/Console/Terminfo/: Base.hs
curly/data/: default.curly  dns-lookup.sh  env.sh  freeze.sh  install.sh  list
curly/data/applications/: curly-context.desktop  curly-library.desktop  curly-source.desktop  curly-uri.desktop
curly/data/bash/completions/: bashcomps.shl  curly  curly.arg.shf  curly.script.shf  curly.sh  cyfile  defcomp.curly-script.shf
curly/data/emacs/: curly-conf-mode.el  curly-mode.el  curly-utils.el
curly/data/kate/: highlight-curly.xml
curly/data/make/: curly.mk
curly/data/man/: curly.1.md  curly.5.md
curly/data/mime/: curly.xml
curly/data/proto/vc/: http  https
curly/doc/: Makefile  curly-document.md  curly-language.md  downloads.md  faq.md  getting-started.md  index.md  install-curly.sh  links.mdi  style.scss  template.html
curly/exe/: Curly.hs
curly/src/Curly/: Readline.hs  Session.hs  Style.hs  UI.hs
curly/src/Curly/Session/: Commands.hs
curly/src/Curly/Session/Commands/: Common.hs  Context.hs  Key.hs  Navigation.hs  Query.hs  Repository.hs  Run.hs  Style.hs  VCS.hs
curly/src/Curly/UI/: Options.hs
curly/src/Language/Syntax/: CmdArgs.hs
definitive-base/: ChangeLog.md  definitive-base.cabal
definitive-base/src/: Definitive.hs
definitive-base/src/Algebra/: Applicative.hs  Arrow.hs  Classes.hs  Core.hs  Foldable.hs  Functor.hs  Lens.hs  Monad.hs  Subtractive.hs  Traversable.hs
definitive-base/src/Algebra/Monad/: Base.hs  Cont.hs  Error.hs  Foldable.hs  Free.hs  Logic.hs  RWS.hs  Reader.hs  State.hs  Writer.hs
definitive-base/src/Data/: Containers.hs  IOVar.hs  Probability.hs  Queue.hs  SExpr.hs  TimeVal.hs
definitive-base/src/Data/Containers/: Sequence.hs
definitive-base/src/Data/Reactive/: Event.hs
definitive-base/src/Definitive/: Base.hs
definitive-base/src/IO/: Time.hs
definitive-filesystem/: ChangeLog.md  LICENSE  definitive-filesystem.cabal
definitive-filesystem/src/IO/: Filesystem.hs
definitive-graphics/: ChangeLog.md  DESCRIPTION  HOMEPAGE  OPTIONS  PKGCONFIG_DEPENDS  SYNOPSIS  definitive-graphics.cabal
definitive-graphics/source/: definitive-graphics.c  definitive-graphics.h
definitive-graphics/source/Data/: Box.hs  Font.hs  Raster.hs
definitive-graphics/source/Data/Input/: Button.hs
definitive-graphics/source/Definitive/: Graphics.hs
definitive-graphics/source/Graphics/: Application.hs  Widget.hs
definitive-graphics/source/Graphics/GDK/: KeyCodes.hs
definitive-graphics/source/Graphics/Widget/: Box.hs  Button.hs  ComboBox.hs  Expander.hs  GLArea.hs  Grid.hs  Image.hs  Internals.hs  Label.hs  Menu.hs  Notebook.hs  Properties.hs  Scrollable.hs  Separator.hs  Switch.hs  Terminal.hs  TextInput.hs  Traits.hs  Window.hs
definitive-graphics/source/Graphics/Widget/Containers/: Internal.hs
definitive-graphics/source/Graphics/Widget/GL/: Core.hs  Scene.hs  Texture.hs  Vertex.hs
definitive-graphics/source/Graphics/Widget/GL/Texture/: Core.hs
definitive-graphics/source/IO/: Dynamic.hs  Graphics.hs
definitive-network/: ChangeLog.md  definitive-network.cabal
definitive-network/src/IO/Network/: Socket.hs
definitive-parser/: ChangeLog.md  definitive-parser.cabal
definitive-parser/src/Language/: Format.hs  Parser.hs
definitive-parser/src/Language/Syntax/: Regex.hs
grow/: grow.cabal
grow/exe/: Grow.hs
hreadline/: hreadline.cabal
hreadline/src/Console/: Readline.hs
logos/: logos.cabal
logos/doc/examples/: #prelude#  demo  fragment.shader  prelude  tile.tga  vertex.shader
logos/exe/: Logos.hs
logos/src/Data/: Font.hs  Matricial.hs
misc/: misc.cabal
misc/exe/: CaPriCon.hs  Coinche.hs  Misc.hs
misc/src/Algebra/Monad/: Concatenative.hs
scripts/: autocommit  changelog  do-release  git-stitch  new-config  notify-build-success  todo  update-deps
scripts/ci/: build-package  build-package.sh  pages  travis-build.sh
scripts/ci/inline/: before_install  install  script
woosh/: woosh.cabal
