name:                curly-kademlia
version:             1.1.0.0
homepage:            https://github.com/froozen/kademlia
synopsis:            An implementation of the Kademlia DHT Protocol (with filtering abilities)
description:
    .
    A haskell implementation of the Kademlia distributed hashtable, an efficient
    way to store and lookup values distributed over a P2P network.
    .
    The implementation is based on the paper
    /Kademlia: A Peer-to-peer Information System Based on the XOR Metric/:
    <http://pdos.csail.mit.edu/~petar/papers/maymounkov-kademlia-lncs.pdf>)
    by Petar Maymounkov and David Mazières.
    .
    This library aims to be very simple and pleasant to use, with the downside of
    deciding some of the implementation details, like timeout intervals and
    k-bucket size, for the user.
    .

    Maintainer note: this package is a fork of the original kademlia
    package, made to accomodate the need for record validation before
    insertion into the hash table. This is made evident by the
    addition of the `i -> a -> Bool` argument to the `create`
    function, that should return True when the key `i` validates the
    content `a`. In turn, this can be useful for implementing
    identity- or content-addressed hash tables that are a little more
    resistant to adverse tampering.

license:             GPL-3
license-file:        LICENSE
author:              fro_ozen <fro_ozen@gmx.de>
maintainer:          Marc Coiffier <marc.coiffier@univ-grenoble-alpes.fr>
category:            Network

build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.Kademlia

  other-modules:       Network.Kademlia.Networking, Network.Kademlia.Types,
                       Network.Kademlia.Protocol, Network.Kademlia.Instance,
                       Network.Kademlia.Protocol.Parsing, Network.Kademlia.Tree,
                       Network.Kademlia.ReplyQueue,
                       Network.Kademlia.Implementation

  build-depends: base >=4.9 && <4.10,bytestring >=0.10 && <0.11,containers >=0.5 && <0.6,mtl >=2.2 && <2.3,network >=2.6 && <2.7,stm >=2.4 && <2.5,transformers >=0.5 && <0.6,transformers-compat >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
