name:                logos
version:             0.1
synopsis:            A word-based gaming environment
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Marc Coiffier
maintainer:          marc.coiffier@univ-grenoble-alpes.fr
-- copyright:           
-- category:          
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Data.Matricial
  build-depends: base >=4.8 && <4.10, definitive-base >=2.6 && <2.7
  default-extensions: TypeSynonymInstances, NoMonomorphismRestriction, StandaloneDeriving, GeneralizedNewtypeDeriving, TypeOperators, RebindableSyntax, FlexibleInstances, FlexibleContexts, FunctionalDependencies, TupleSections, MultiParamTypeClasses, Rank2Types, AllowAmbiguousTypes, RoleAnnotations, ViewPatterns, LambdaCase
  hs-source-dirs:      src
  default-language:    Haskell2010

executable logos
  build-depends: base >=4.8 && <4.10, definitive-base >=2.6 && <2.7, capricon, OpenGL, GLFW, StateVar, JuicyPixels, vector, logos, definitive-parser, hreadline
  default-extensions: TypeSynonymInstances, NoMonomorphismRestriction, StandaloneDeriving, GeneralizedNewtypeDeriving, TypeOperators, RebindableSyntax, FlexibleInstances, FlexibleContexts, FunctionalDependencies, TupleSections, MultiParamTypeClasses, Rank2Types, AllowAmbiguousTypes, RoleAnnotations, ViewPatterns, LambdaCase
  hs-source-dirs:      exe
  main-is: Logos.hs
  default-language:    Haskell2010
  
  
