name:                logos
version:             0.1
synopsis:            A word-based gaming environment
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Marc Coiffier
maintainer:          marc.coiffier@univ-grenoble-alpes.fr
-- copyright:           
-- category:          
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Data.Matricial Data.Font
  build-depends: base >=4.9 && <4.10,definitive-base >=2.6 && <2.7, freetype2, vector
  default-extensions: TypeSynonymInstances, NoMonomorphismRestriction, StandaloneDeriving, GeneralizedNewtypeDeriving, TypeOperators, RebindableSyntax, FlexibleInstances, FlexibleContexts, FunctionalDependencies, TupleSections, MultiParamTypeClasses, Rank2Types, AllowAmbiguousTypes, RoleAnnotations, ViewPatterns, LambdaCase
  hs-source-dirs:      src
  default-language:    Haskell2010

executable logos
  build-depends: base >=4.9 && <4.10,capricon >=0.10 && <0.11,definitive-base >=2.6 && <2.7,definitive-parser >=3.1 && <3.2,GLFW >=0.5 && <0.6,hreadline >=0.2 && <0.3,JuicyPixels >=3.2 && <3.3,logos >=0.1 && <0.2,OpenGL >=3.0 && <3.1,StateVar >=1.1 && <1.2,vector >=0.12 && <0.13
  default-extensions: TypeSynonymInstances, NoMonomorphismRestriction, StandaloneDeriving, GeneralizedNewtypeDeriving, TypeOperators, RebindableSyntax, FlexibleInstances, FlexibleContexts, FunctionalDependencies, TupleSections, MultiParamTypeClasses, Rank2Types, AllowAmbiguousTypes, RoleAnnotations, ViewPatterns, LambdaCase
  hs-source-dirs:      exe
  ghc-options: -threaded
  main-is: Logos.hs
  default-language:    Haskell2010
  
  
