name:                woosh
version:             0.1
-- synopsis:            
-- description:         
license:             GPL-3
author:              Marc Coiffier
maintainer:          marc.coiffier@univ-grenoble-alpes.fr
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

executable woosh
  main-is: Main.hs
  -- other-modules:
  default-extensions: TypeSynonymInstances,
                      NoMonomorphismRestriction,
                      StandaloneDeriving,
                      GeneralizedNewtypeDeriving,
                      TypeOperators,
                      RebindableSyntax,
                      FlexibleInstances,
                      FlexibleContexts,
                      FunctionalDependencies,
                      TupleSections,
                      MultiParamTypeClasses,
                      Rank2Types,
                      AllowAmbiguousTypes,
                      RoleAnnotations
  other-extensions:    ImplicitParams, StandaloneDeriving, MultiParamTypeClasses, RankNTypes, DefaultSignatures, TupleSections, Rank2Types, FunctionalDependencies, ViewPatterns, LiberalTypeSynonyms, NoRebindableSyntax, EmptyDataDecls, CPP, ScopedTypeVariables, UndecidableInstances, DeriveGeneric, ExistentialQuantification, RecursiveDo, DeriveDataTypeable
  build-depends: base >=4.9 && <4.10,definitive-base,definitive-parser, utf8-string
  hs-source-dirs:      exe
  default-language:    Haskell2010
